# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  configuration.yaml  spec.yaml
.github/workflows/: main.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250726144603_create_subscriptions_table.sql  20250831110054_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configurations.rs  lib.rs  main.rs  startup.rs
src/lib/: configurations.rs  domain.rs  email_client.rs  startup.rs  telemetry.rs
src/lib/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/lib/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs
