[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
# We could use any path here, but we are following the community convetion
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can't have multiple binaries!
# If you want to manage multiple libraries in the same repository,
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
actix-web = "4.11.0"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate"
]