[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
# We could use any path here, but we are following the community convetion
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can't have multiple binaries!
# If you want to manage multiple libraries in the same repository,
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tokio = { version = "1.46", features = ["rt", "rt-multi-thread", "macros"] }
actix-web = "4.11"
reqwest = "0.12"
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15"
uuid = { version = "1.17", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
once_cell = "1"
secrecy = { version = "0.10", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4.7"
unicode-segmentation = "1.12"
claims = "0.8"
validator = "0.20"
fake = "4.4"
quickcheck = "1"
quickcheck_macros = "1.1"
rand = "0.9"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
]
